    - WgxSetProcessPriority routine added to wgx library


  Version 5.0.5  2012-04-
  ------------------------------------------------------------------------------
    - repair drives action was added to the GUI menu
    - displaying the cluster map legend from the help menu was added
    - cluster map scaling was forced to be more accurate
    - GUI options verification was added
    - ability to analyze, optimize and quick optimize drive from
      Explorer context menu added
    - relative log paths support added to both GUI and console interface
    - support of Unicode strings added to GUI options
    - encoding of language packs changed to UTF-8
    - status bar MFT string removed from translations, since it is nearly
      impossible to translate due to space issues
    - the following translations were updated:

      Hebrew, Bosanski

    - Internals: make-mingw-projects.lua script added
    - WgxCreateProcess and WgxCreateThread routines added to wgx library
    - winx_flush_dbg_log routine added to zenwinx library
    - udefrag_flush_dbg_log routine added to udefrag library
    - os.setenv routine added to Lua library
    - WgxBuildResourceTable, WgxSetText, WgxGetResourceString prototypes
      changed as well as WGX_I18N_RESOURCE_ENTRY structure definition
    - unsafe IncreaseGoogleAnalyticsCounterAsynch routine
      removed from wgx library


  Version 5.0.4  2012-04-07
  ------------------------------------------------------------------------------
    - dirty volumes needing CHKDSK repair were returned
      to the drives list with a special mark in their status field
    - taskbar icon overlay indicating that a job is running was added
      for Windows 7 and more recent Windows editions; it can be turned
      on/off by show_taskbar_icon_overlay GUI option
    - menu item to manually check for updates added
    - i18n support was added to file fragmentation reports
    - the following translations were updated:
